:bulb: set button

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .main-container {
   width: 100%;
   max-width: 500px;
-  height: 450px;
+  height: 420px;
   background: #182230;
   border-radius: 20px;
   margin: 20px auto;
@@ -51,5 +51,19 @@
   position: absolute;
   top: 33%;
   right: 7px;
+  cursor: pointer;
+}
+.button-container {
+  padding-top: 20px;
+}
+#button {
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  color: #f2f2f2;
+  background-color: #019f55;
+  border-radius: 15px;
   cursor: pointer;
 }
